# AI-News-Aggregator

./: Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: daily_runner.py  example.env
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/database/: check_connection.py  connection.py  migrate_send_at.py  models.py  repository.py
app/scrapers/: anthropic.py  openai.py  youtube.py
app/services/: email_service.py  process_curator.py  process_digest.py  process_email.py
docker/: docker-compose.yml
